--- a/public/ajax/content/dropzone.html
+++ b/public/ajax/content/dropzone.html
@@ -6,10 +6,10 @@
 <!-- ajax layout which only needs content area -->
 <div class="page-header">
 	<h1>
-		Dropzone.js
+		拖拽区域上传
 		<small>
 			<i class="ace-icon fa fa-angle-double-right"></i>
-			Drag &amp; drop file upload with image preview
+			拖拽区域上传 & 及时预览
 		</small>
 	</h1>
 </div><!-- /.page-header -->
@@ -86,7 +86,7 @@
 	    
 		thumbnailHeight: 120,
 	    thumbnailWidth: 120,
-	    maxFilesize: 0.5,
+	    maxFilesize: 1,
 		
 		//addRemoveLinks : true,
 		//dictRemoveFile: 'Remove',
