--- a/public/ajax/content/nestable-list.html
+++ b/public/ajax/content/nestable-list.html
@@ -4,10 +4,10 @@
 <!-- ajax layout which only needs content area -->
 <div class="page-header">
 	<h1>
-		Nestable lists
+		嵌套列表
 		<small>
 			<i class="ace-icon fa fa-angle-double-right"></i>
-			Drag &amp; drop hierarchical list
+			拖放分层列表
 		</small>
 	</h1>
 </div><!-- /.page-header -->
