--- a/public/ajax/index.html
+++ b/public/ajax/index.html
@@ -312,7 +312,7 @@
 							<li class="">
 								<a data-url="page/content-slider" href="#page/content-slider">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Content Sliders
+									内容滑动
 								</a>
 
 								<b class="arrow"></b>
@@ -321,7 +321,7 @@
 							<li class="">
 								<a data-url="page/treeview" href="#page/treeview">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Treeview
+									树形图
 								</a>
 
 								<b class="arrow"></b>
@@ -330,7 +330,7 @@
 							<li class="">
 								<a data-url="page/nestable-list" href="#page/nestable-list">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Nestable Lists
+									嵌套列表
 								</a>
 
 								<b class="arrow"></b>
@@ -340,7 +340,7 @@
 								<a href="#" class="dropdown-toggle">
 									<i class="menu-icon fa fa-caret-right"></i>
 
-									Three Level Menu
+									三级菜单
 									<b class="arrow fa fa-angle-down"></b>
 								</a>
 
@@ -394,7 +394,7 @@
 					<li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-list"></i>
-							<span class="menu-text"> Tables </span>
+							<span class="menu-text"> 表格 </span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -414,7 +414,7 @@
 							<li class="">
 								<a data-url="page/jqgrid" href="#page/jqgrid">
 									<i class="menu-icon fa fa-caret-right"></i>
-									jqGrid plugin
+									jqGrid 插件
 								</a>
 
 								<b class="arrow"></b>
@@ -425,7 +425,7 @@
 					<li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-pencil-square-o"></i>
-							<span class="menu-text"> Forms </span>
+							<span class="menu-text"> 表单 </span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -436,7 +436,7 @@
 							<li class="">
 								<a data-url="page/form-elements" href="#page/form-elements">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Form Elements
+									表单元素
 								</a>
 
 								<b class="arrow"></b>
@@ -445,7 +445,7 @@
 							<li class="">
 								<a data-url="page/form-elements-2" href="#page/form-elements-2">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Form Elements 2
+									表单元素 2
 								</a>
 
 								<b class="arrow"></b>
@@ -454,7 +454,7 @@
 							<li class="">
 								<a data-url="page/form-wizard" href="#page/form-wizard">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Wizard &amp; Validation
+									Wizard &amp; 验证
 								</a>
 
 								<b class="arrow"></b>
@@ -463,7 +463,7 @@
 							<li class="">
 								<a data-url="page/wysiwyg" href="#page/wysiwyg">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Wysiwyg &amp; Markdown
+									富文本编辑
 								</a>
 
 								<b class="arrow"></b>
@@ -472,7 +472,7 @@
 							<li class="">
 								<a data-url="page/dropzone" href="#page/dropzone">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Dropzone File Upload
+									拖拽区域上传
 								</a>
 
 								<b class="arrow"></b>
@@ -483,7 +483,7 @@
 					<li class="">
 						<a data-url="page/widgets" href="#page/widgets">
 							<i class="menu-icon fa fa-list-alt"></i>
-							<span class="menu-text"> Widgets </span>
+							<span class="menu-text"> 小部件 </span>
 						</a>
 
 						<b class="arrow"></b>
@@ -494,7 +494,7 @@
 							<i class="menu-icon fa fa-calendar"></i>
 
 							<span class="menu-text">
-								Calendar
+								日历系统
 
 								<!-- #section:basics/sidebar.layout.badge -->
 								<span class="badge badge-transparent tooltip-error" title="2 Important Events">
@@ -511,7 +511,7 @@
 					<li class="">
 						<a data-url="page/gallery" href="#page/gallery">
 							<i class="menu-icon fa fa-picture-o"></i>
-							<span class="menu-text"> Gallery </span>
+							<span class="menu-text"> 画廊 </span>
 						</a>
 
 						<b class="arrow"></b>
@@ -520,7 +520,7 @@
 					<li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-tag"></i>
-							<span class="menu-text"> More Pages </span>
+							<span class="menu-text"> 更多</span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -531,7 +531,7 @@
 							<li class="">
 								<a data-url="page/profile" href="#page/profile">
 									<i class="menu-icon fa fa-caret-right"></i>
-									User Profile
+									用户详情
 								</a>
 
 								<b class="arrow"></b>
@@ -540,7 +540,7 @@
 							<li class="">
 								<a data-url="page/inbox" href="#page/inbox">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Inbox
+									邮箱
 								</a>
 
 								<b class="arrow"></b>
@@ -549,7 +549,7 @@
 							<li class="">
 								<a data-url="page/pricing" href="#page/pricing">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Pricing Tables
+									价格表
 								</a>
 
 								<b class="arrow"></b>
@@ -558,7 +558,7 @@
 							<li class="">
 								<a data-url="page/invoice" href="#page/invoice">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Invoice
+									发票
 								</a>
 
 								<b class="arrow"></b>
@@ -567,7 +567,7 @@
 							<li class="">
 								<a data-url="page/timeline" href="#page/timeline">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Timeline
+									时间线
 								</a>
 
 								<b class="arrow"></b>
@@ -576,7 +576,7 @@
 							<li class="">
 								<a data-url="page/search" href="#page/search">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Search Results
+									搜索结果
 								</a>
 
 								<b class="arrow"></b>
@@ -585,7 +585,7 @@
 							<li class="">
 								<a data-url="page/email" href="#page/email">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Email Templates
+									邮件模板
 								</a>
 
 								<b class="arrow"></b>
@@ -594,7 +594,7 @@
 							<li class="">
 								<a data-url="page/login" href="../login.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Login &amp; Register
+									登录 &amp; 注册
 								</a>
 
 								<b class="arrow"></b>
@@ -607,7 +607,7 @@
 							<i class="menu-icon fa fa-file-o"></i>
 
 							<span class="menu-text">
-								Other Pages
+								其他
 
 								<!-- #section:basics/sidebar.layout.badge -->
 								<span class="badge badge-primary">5</span>
@@ -688,14 +688,9 @@
 								<a href="#page/index">Home</a>
 							</li>
 						</ul><!-- /.breadcrumb -->
-
-
 					</div>
 
 					<div class="page-content">
-
-
-
 						<div class="page-content-area" data-ajax-content="true">
 							<!-- ajax content goes here -->
 						</div><!-- /.page-content-area -->
