--- a/public/login.html
+++ b/public/login.html
@@ -264,7 +264,7 @@
                     $(target).addClass('visible');//show target
                 });
                 $("#login-btn").on("click",function () {
-					document.location.href="./ajax/indextest.html"
+					document.location.href="./ajax/index.html"
                 })
             })
 		</script>
