--- a/public/ajax/content/form-elements.html
+++ b/public/ajax/content/form-elements.html
@@ -12,7 +12,7 @@
 <!-- ajax layout which only needs content area -->
 <div class="page-header">
 	<h1>
-		Form Elements
+		表单元素
 		<small>
 			<i class="ace-icon fa fa-angle-double-right"></i>
 			Common form elements and layouts
