--- a/public-test/index.html
+++ b/public-test/index.html
@@ -15,7 +15,10 @@
 		<link rel="stylesheet" href="../resource/css/ace-fonts.css" />
 
 		<!-- ace styles -->
-		<link rel="stylesheet" href="../resource/css/ace.css" class="ace-main-stylesheet" id="main-ace-style" />
+		<link rel="stylesheet" href="../resource/css/ace.css" />
+
+		<!--by myself-->
+		<link rel="stylesheet" href="../resource/css/public.css" />
 
 	</head>
 
@@ -230,23 +233,6 @@
 							<b class="arrow"></b>
 						</li>
 						<li class="">
-							<a data-url="page/jqueryTable" href="#page/jqueryTable">
-								<i class="menu-icon fa fa-caret-right"></i>
-								jqueryTable
-							</a>
-
-							<b class="arrow"></b>
-						</li>
-						<li class="">
-							<a data-url="page/jqGrid" href="#page/jqGrid">
-								<i class="menu-icon fa fa-caret-right"></i>
-								jqGrid
-							</a>
-
-							<b class="arrow"></b>
-						</li>
-
-						<li class="">
 							<a data-url="page/myTable" href="#page/myTable">
 								<i class="menu-icon fa fa-caret-right"></i>
 								myTable
@@ -373,4 +359,10 @@
 	<script src="../resource/js/ace.js"></script>
 	<script src="../resource/js/ace-elements.js"></script>
 	<script src="../resource/js/ace-extra.js"></script>
+
+	<script src="../resource/js/jquery.cookies.2.2.0.js"></script>
+	<script src="../resource/js/jquery.pagination.js"></script>
+	<script src="../resource/js/message.js"></script>
+	<script src="../resource/js/public.js"></script>
+	<script src="../resource/js/config.js"></script>
 
